Final polished features Included API calls to vision21 api

--- a/app/config.json
+++ b/app/config.json
@@ -1,5 +1,7 @@
 {
-	"global": {}, 
+	"global": {
+		"apiUrl": "http://vision21.cloudapp.net/api/AppData/"
+	}, 
 	"env:development": {}, 
 	"env:test": {}, 
 	"env:production": {}, 
