--- a/app/config.json
+++ b/app/config.json
@@ -1,6 +1,6 @@
 {
   "global": {
-    "apiUrl": "http://vision21.cloudapp.net/api/",
+    "apiUrl": "http://aviator.cloudapp.net/api/",
     "appData": "AppData/",
     "lawEnforcementApi": "AppLawEnforcement/",
     "veteransApi": "AppVeterans/",
